# PrintGrandma

./: .gitignore  README.md  environmental_variables_check.py  printgrandma.py  pyproject.toml  requirements.txt
config/: config.yaml
printgrandma/: __init__.py  telegram_interface.py
printgrandma/interfaces/: printer_interface.py  telegram_interface.py
printgrandma/processors/: telegram_bot.py  thermal_printer.py
printgrandma/utils/: utils.py
test/: test.py
