[project]
name = "printgrandma"
version = "0.1.0"
description = "Automatic thermal printer system for pictures via Telegram bot"
authors = [{ name = "Joel Pérez Izquierdo", email = "joelperez91@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "python-escpos[usb]==3.1",
    "python-telegram-bot==20.7",
    "pyyaml==6.0.1",
    "pydantic>=2.5.3,<3.0",
]

[project.scripts]
printgrandma = "printgrandma:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["printgrandma"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
